@@ -311,6 +311,7 @@
     <extraJavaTestArgs>
       -XX:+IgnoreUnrecognizedVMOptions
       --add-modules=jdk.incubator.vector
+      --add-modules=jdk.incubator.foreign
       --add-opens=java.base/java.lang=ALL-UNNAMED
       --add-opens=java.base/java.lang.invoke=ALL-UNNAMED
       --add-opens=java.base/java.lang.reflect=ALL-UNNAMED
